--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <h2>dar click en las tarjetas te llevara al proyecto</h2>
           </div>
           <div class="project-container">
-            <div class="project-box" data-href="/e-commerce/index.html">
+            <div class="project-box" data-href="https://kev1nm4rtinez.github.io/ecommerce/index.html">
                 <h3>Prototipo E-Commerce</h3>
                 <label>Tienda virtual de productos nike , cuenta con una interfaz dinamica, pasarela de pagos y un carrito de compras hecho en HTML ,CSS y JS</label>
                 <i class="uil uil-shopping-bag"></i>
