--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </ul>
         </div>
         <div class="nav-button">
-            <a href="img/Hoja de Vida Kevin Martinez.pdf" download="Hoja de Vida Kevin Martinez.pdf">
+            <a href="..img/Hoja de Vida Kevin Martinez.pdf" download="Hoja de Vida Kevin Martinez.pdf">
             <button class="btn">Descargar CV <i class="uil uil-file-alt"></i></button>
         </a>
         </div>
