--- a/index.html
+++ b/index.html
@@ -75,9 +75,15 @@
             </a>
             </div>
             <div class="social_icons">
-                <div class="icon"><i class="uil uil-instagram"></i></div>
-                <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-                <div class="icon"><i class="uil uil-github-alt"></i></div>
+                <a href="https://www.instagram.com/kevin_4martinez/">
+            <div class="icon"><i class="uil uil-instagram"></i></div>
+            </a>
+            <a href="https://www.linkedin.com/in/kevin-martinez-b3848b266/">
+            <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
+             </a>
+             <a href="https://github.com/Kev1nM4rtinez">
+            <div class="icon"><i class="uil uil-github-alt"></i></div>
+             </a>
             </div>
           </div>
           <div class="scroll-icon-box">
@@ -159,10 +165,10 @@
                 <label>utilizando conocimiento en diseño implemente una pagina sobre Bogota con uso informativo</label>
                 <i class="uil uil-dribbble"></i>
               </div>
-            <div class="project-box">
+            <div class="project-box" data-href="https://kevinmartinez0487.hatch.one/portafolio-tiendagamer">
                 <i class="uil uil-award"></i>
-                <h3>titulo proyecto</h3>
-                <label>proyecto3</label>
+                <h3>Mockup hecho en Hatch.io</h3>
+                <label>Se utilizo un concepto basico pero a su vez atractico para la creacion de un sitio de comercio de electronicos</label>
             </div>
           </div>
        </section>
@@ -224,9 +230,15 @@
             </ul>
         </div>
         <div class="footer-social-icons">
+            <a href="https://www.instagram.com/kevin_4martinez/">
             <div class="icon"><i class="uil uil-instagram"></i></div>
+            </a>
+            <a href="https://www.linkedin.com/in/kevin-martinez-b3848b266/">
             <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
+             </a>
+             <a href="https://github.com/Kev1nM4rtinez">
             <div class="icon"><i class="uil uil-github-alt"></i></div>
+             </a>
         </div>
         <div class="bottom-footer">
             <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Kevin Martinez</a></p>
@@ -235,13 +247,8 @@
 
     </div>
 
-
-
-
-    <!-- ----- TYPING JS Link ----- -->
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-
-       <!-- ----- SCROLL REVEAL JS Link----- -->
+   
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>  
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!-- ----- MAIN JS ----- -->
