--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
        <section class="section" id="projects">
           <div class="top-header">
               <h1>Proyectos</h1>
-              <h2>dar click en las tarjetas te llevara al proyecto</h2>
+              <h2>Dar click en las tarjetas te llevara al proyecto</h2>
           </div>
           <div class="project-container">
             <div class="project-box" data-href="https://kev1nm4rtinez.github.io/ecommerce/index.html">
@@ -166,9 +166,9 @@
                 <i class="uil uil-dribbble"></i>
               </div>
             <div class="project-box" data-href="https://kevinmartinez0487.hatch.one/portafolio-tiendagamer">
-                <i class="uil uil-award"></i>
                 <h3>Mockup hecho en Hatch.io</h3>
                 <label>Se utilizo un concepto basico pero a su vez atractico para la creacion de un sitio de comercio de electronicos</label>
+                <i class="uil uil-award"></i>
             </div>
           </div>
        </section>
@@ -177,7 +177,7 @@
 
        <section class="section" id="contact">
           <div class="top-header">
-            <h1>seccion contacto</h1>
+            <h1>sección contacto</h1>
 
           </div>
           <div class="row">
